[gd_scene load_steps=2 format=3 uid="uid://diigd8sqcb7lu"]

[ext_resource type="Script" path="res://spricts/pause_menu.gd" id="1_my0db"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_my0db")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Button Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume
"

[node name="Button Main Menu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="CheckButton" type="CheckButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="PanelContainer/VBoxContainer/Button Resume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button Main Menu" to="." method="_on_button_main_menu_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_pressed"]
